--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/Zaid Ahmed R.JPG" alt="Zaid Ahmed R Pic">
+                    <img src="images/Zaid Ahmed R.jpeg" alt="Zaid Ahmed R">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Zaid Ahmed R and I'm a <span class="typing-2"></span></div>
@@ -75,7 +75,7 @@
                     <!-- <a href="https://www.overleaf.com/project/65a1f7eb9571d5eedd3aa763" target="_blank">Download CV</a> -->
                     <h2 style="font-family: Arial, Helvetica, sans-serif; font-size: x-large; text-decoration: underline;">Check Out -:</h2>
                     
-                    <a href="ZaidAhmedR_RESUME.pdf" target="_blank" class="about-buttons-style">My-Resume</a> &nbsp;&nbsp;
+                    <a href="ZaidAhmedR_Resume.pdf" target="_blank" class="about-buttons-style">My-Resume</a> &nbsp;&nbsp;
                     <a href="http://www.linkedin.com/in/zaidahmedr/" target="_blank">My-Linkedin</a> &nbsp;&nbsp;
                      <a href="https://github.com/zaidahmed-6725" target="_blank">My-GitHub</a> 
                      
